# sourdough

./: .gitignore  .travis.yml  LICENSE.txt  README.md  pyproject.toml
examples/: __init__.py
sourdough/: __init__.py  project.py
sourdough/base/: __init__.py  components.py  core.py  creators.py  elements.py  factory.py  lexicons.py  mixins.py  settings.py  strategies.py  validator.py
sourdough/components/: elements.py  graphs.py  structures.py  workflows.py
sourdough/configuration/: __init__.py  defaults.py  filer.py  settings.py
sourdough/core/: base.py  bases.py  component.py  components.py  composites.py  configuration.py  containers.py  converters.py  elements.py  factory.py  files.py  foundry.py  framework.py  hub.py  interface.py  interfaces.py  iterables.py  library.py  manager.py  mixins.py  nodes.py  options.py  plugins.py  quirks.py  registry.py  resources.py  structures.py  transfer.py  types.py  utilities.py  validator.py  validators.py  workflow.py  workflows.py  workshop.py
sourdough/creation/: __init__.py  system.py  worker.py
sourdough/project/: __init__.py  (+53 more)
tests/: __init__.py  composite_settings.py  ini_settings.ini  json_settings.json  py_settings.py  test_catalog.py  test_component.py  test_components.py  test_composite_project.py  test_definition.py  test_dictionaries.py  test_filer.py  test_graph.py  test_hybrid.py  test_iterables.py  test_lexicon.py  test_manager.py  test_mixins.py  test_options.py  test_plan.py  test_project.py  test_repository.py  test_settings.py  test_sourdough.py  test_system.py  test_tree.py  test_worker.py
(+65 files in other folders)
