[tool.poetry]
name = "sourdough"
version = "0.1.2"
description = "start python projects right"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
